@@ -1,5 +1,7 @@
 Version 5.9.7
 - Added some more bit-banging optimizations (e.g. bith/bitl -> bitc)
+- Added a new optimization for simple FOR loops with constant bounds
+- Added special function optimizations for pinread/pinwrite
 - Added SIZEOF operator to BASIC
 - Added BITREV function to BASIC
 - Fixed a few missing definitions in <propeller.h>
